# rust_projects

collection_1/noughts_and_crosses/: Cargo.toml
collection_1/noughts_and_crosses/src/: main.rs
collection_1/poker_game_win_checker/: Cargo.toml
collection_1/poker_game_win_checker/src/: main.rs
collection_1/rust_click_capture_database/: Cargo.toml  database  database.db
collection_1/rust_click_capture_database/src/: database.rs  main.rs
collection_1/rust_server_from_scratch/: Cargo.toml
collection_1/rust_server_from_scratch/src/: main.rs  server.rs  website_handler.rs
collection_1/rust_server_from_scratch/src/htdocs/: index.html
collection_1/rust_server_from_scratch/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
collection_1/sudoku_test/: Cargo.toml
collection_1/sudoku_test/src/: main.rs  pgm10.pgm  pgm11.pgm  pgm3.pgm  pgm4.pgm  pgm5.pgm
collection_1/web_server/: Cargo.toml
collection_1/web_server/src/: config.rs  db.rs  handler.rs  main.rs  model.rs
