[package]
name = "rust_click_capture_database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winput = "0.2.5"
fltk = "1.2.18"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"