[package]
name = "web_server"
version = "0.1.0"
authors = ["Aamir Ali"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"]}
actix-rt = "1.0.0"
actix-web = "2.0.0"
dotenv = "0.15.0"
config = "0.11.0"
tokio-postgres = "0.5.1"
deadpool-postgres = "0.5.0"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"


